add phased paradox shard yay \o/

--- a/src/main/resources/assets/thetimeparadoxmod/lang/en_US.lang
+++ b/src/main/resources/assets/thetimeparadoxmod/lang/en_US.lang
@@ -1,4 +1,6 @@
 tile.paradox.name=Paradox
 tile.stableparadox.name=Stable Paradox
+tile.hardenedparadox.name=Hardened Paradox
 item.paradoxchip.name=Paradox Chip
 item.paradoxpickaxe.name=Paradox Pickaxe
+item.phasedparadoxshard.name=Phased Paradox Shard
